5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1812_2131.log
== TEST (2019-06-05 00:18:59) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=0
while(y>j):
	l=l+(((x**2)/factorial(d))*t)
	d=d+2
	t=-t
print(1-h)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(y>j):
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:19:19) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=0
j=0
while(y>j):
	l=l+(((x**2)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(1-h)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(1-h)	
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:19:40) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=0
j=0
while(y>j):
	l=l+(((x**2)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(1-l)	
-- OUTPUT:
0.7414200470508285
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:20:27) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=0
j=0
while(y>j):
	l=l+(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(1-l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:21:08) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=0
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 00:21:28) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- EXECUTION TIME:
0.704875
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.7316888688738209
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.9663899781345132
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.8915682881953291
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:21:30) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:21:39) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:21:56) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:22:11) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:22:44) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 00:23:34) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- EXECUTION TIME:
0.786718
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.7316888688738209
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.9663899781345132
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.8915682881953291
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:23:37) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(l)	
-- OUTPUT:
0.7316888688738209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:24:45) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(round(l,11))	
-- OUTPUT:
0.73168886887
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:24:58) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(round(l,11))	
-- OUTPUT:
0.73168886887
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 00:25:11) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(round(l,11))	
-- EXECUTION TIME:
0.78682
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.73168886887
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.96638997813
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.8915682882
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 23:03:48) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l-(((x**d)/factorial(d))*t)
	d=d+2
	t=-t
	j=j+1
print(round(l,11))	
-- EXECUTION TIME:
0.617739
-- TEST CASE 1:
---- input:
0.75
36
---- correct output:
0.73168886887
---- user output:
0.73168886887
-- TEST CASE 2:
---- input:
0.26
47
---- correct output:
0.96638997813
---- user output:
0.96638997813
-- TEST CASE 3:
---- input:
0.47
58
---- correct output:
0.8915682882
---- user output:
0.8915682882
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
